# cardstack

./: .shrike.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md
docs/specs/: README.md  non-functional-requirements.md
docs/specs/board/: requirements.md
docs/specs/storage/: edge-cases.md  requirements.md
docs/specs/tui/: api-contract.md  edge-cases.md  requirements.md
src/: app.rs  command.rs  dialog.rs  filter.rs  focus.rs  main.rs  model.rs  storage.rs
src/ui/: card.rs  dialog.rs  mod.rs
