[package]
name = "cardstack"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
ratatui = "0.30.0"
crossterm = "0.29.0"
unicode-width = "0.2"
ferrowl-ui = { git = "https://github.com/TumbleOwlee/ferrowl.git", rev = "d6adb448c5f3b90a579759b1892c6bd6c3cffc71", default-features = false, features = [
    "vscode_dark",
] }
